// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TogglableTag renders as expected with a yellow color 1`] = `
<span
  className="lab-tag lab-tag--togglable lab-tag--yellow-pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  Test render yellow TogglableTag
</span>
`;

exports[`TogglableTag renders as expected with disabled as true 1`] = `
<span
  className="lab-tag lab-tag--togglable lab-tag--disabled lab-tag--pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  Test nount disabled TogglableTag
</span>
`;

exports[`TogglableTag renders as expected with outline as true 1`] = `
<span
  className="lab-tag lab-tag--togglable lab-tag--outline lab-tag--pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  Test render outline TogglableTag
</span>
`;

exports[`TogglableTag renders with a pale skin if not isOn 1`] = `
<span
  className="lab-tag lab-tag--togglable lab-tag--pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  Test render pale TogglableTag
</span>
`;

exports[`TogglableTag renders with a vivid skin and a checked icon if isOn 1`] = `
<span
  className="lab-tag lab-tag--togglable lab-tag--vivid lab-tag--has-left-icon"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  <span
    className="lab-icon lab-icon--check lab-icon--black75 lab-icon--petit lab-icon--check-icon"
  />
  Test render isOn TogglableTag
</span>
`;

exports[`TogglableTag renders with base props 1`] = `
<span
  className="lab-tag lab-tag--togglable lab-tag--pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  Test render TogglableTag
</span>
`;
